--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "styled-components": "5.3.3"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
@@ -18,6 +19,7 @@
     "concurrently": "6.3.0",
     "joi": "17.4.2",
     "json-server": "0.17.0",
+    "react-redux": "^8.0.4",
     "sass": "1.43.4",
     "typescript": "^4.8.3"
   },
